--- a/test.html
+++ b/test.html
@@ -1,1 +1,49 @@
-hi,ds
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>DeepSeek-V3调用示例</title>
+</head>
+
+<body>
+    <textarea id="input" placeholder="输入你的问题..." rows="5" cols="50"></textarea><br>
+    <button onclick="callDeepSeek()">咨询DeepSeek</button>
+    <div id="response"></div>
+
+    <script>
+        const API_KEY = 'sk-wrcbwflldrmksxylmlkhouvjbhpbztmisxkzwwpjmyoeuhrp'; // [[3,6,15]]
+        const MODEL = 'deepseek-ai/DeepSeek-V3'; // [[3,9,15]]
+
+        async function callDeepSeek() {
+            const inputText = document.getElementById('input').value;
+            const responseArea = document.getElementById('response');
+            responseArea.innerHTML = "思考中...";
+
+            try {
+                const response = await fetch('https://api.siliconflow.cn/v1/chat/completions', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${API_KEY}`
+                    },
+                    body: JSON.stringify({
+                        model: MODEL,
+                        messages: [{
+                            role: "user",
+                            content: inputText
+                        }],
+                        temperature: 0.7
+                    })
+                });
+
+                const data = await response.json();
+                responseArea.innerHTML = data.choices[0].message.content +
+                    `<br>本次消耗: ${data.usage.total_tokens} tokens`; // [[2,11,12]]
+            } catch (error) {
+                responseArea.innerHTML = "请求失败: " + error.message;
+            }
+        }
+    </script>
+</body>
+
+</html>
