--- a/demo2.html
+++ b/demo2.html
@@ -126,8 +126,8 @@
                     <p>🐰 聪明兔</p>
                 </div>
                 <div class="card" data-animal="兔子">
-                    <img src="https://q0.itc.cn/q_70/images01/20240307/3cdb0bbef0864638898dff1dfea1f967.jpeg" alt="兔子">
-                    <p>🐰 聪明兔</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsrwuk-MuO34fNvm9B2lYCcIp8rtoW_-R8IQ&s" alt="大象">
+                    <p>🐰 大象</p>
                 </div>
                 <div class="card" data-animal="兔子">
                     <img src="https://q0.itc.cn/q_70/images01/20240307/3cdb0bbef0864638898dff1dfea1f967.jpeg" alt="兔子">
