--- a/demo2.html
+++ b/demo2.html
@@ -248,6 +248,7 @@
             const scene = $('input[name="scene"]:checked').val()
 
             const inputText = `设计一个${selectedAnimals.join('、')}在${scene}展开冒险的50字童话故事`
+            $('#story-output').text("思考中")
             //const responseArea = document.getElementById('response');
             //responseArea.innerHTML = "思考中...";
 
